--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
 <div class="wrapper">
     <div class="intro">
         <div class="profile">
@@ -215,3 +220,5 @@
         </div>
     </div>
 </div>
+</body>
+</html>
