--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
     <div class="intro">
         <div class="profile">
             <div class="photo">
-                <img src="https://i.imgur.com/zh9eNsh.jpg">
+                <img src="dp.jpeg">
             </div>
             <div class="bio">
-                <h1 class="name">Chih-Hsiang Chen</h1>
-                <p class="profession">Front-end Developer</p>
+                <h1 class="name">Aditi Nandan Singh</h1>
+                <p class="profession">Senior Software Engineer</p>
             </div>
         </div>
         <div class="intro-section about">
             <h1 class="title">about me</h1>
             <p class="paragraph">
-                Hi everyone, I am a web front-end developer, graduated from NTHU, Taiwan and my major is CS. I recently try my
-                best to improve my skills on web front-end. My favorite thing is to observe others' portfolio.
+                Skilled and efficient developer, currently working as Senior Software Engineer at Blume Global. Previously worked at Oracle and Cognizant. My forte is
+                solving complex problems efficiently and writing well designed and neat code using the current best practices.
             </p>
         </div>
         <div class="intro-section contact">
             <h1 class="title">Contact</h1>
             <div class="info-section">
                 <i class="fas fa-phone"></i>
-                <span>(+886)888-888-888</span>
+                <span>(+091) 7807069631</span>
             </div>
             <div class="info-section">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Kaoshiung, Taiwan</span>
+                <span>Bengaluru, India</span>
             </div>
             <div class="info-section">
                 <i class="fas fa-paper-plane"></i>
-                <span>chih.hsi.chen@gmail.com</span>
+                <span>aditinandan@live.com</span>
             </div>
             <div class="info-section link">
                 <i class="fab fa-facebook"></i>
-                <a target="_blank" rel="author" href="https://www.facebook.com/profile.php?id=100006277752355">
-                    <span>陳志祥</span>
+                <a target="_blank" rel="author" href="">
+                    <span>In Progress</span>
                 </a>
             </div>
         </div>
@@ -46,20 +46,14 @@
             <h1 class="title">Follow</h1>
             <div class="info-section link">
                 <i class="fab fa-github"></i>
-                <a target="_blank" rel="author" href="https://github.com/chih-hsi-chen">
-                    <span>chih-hsi-chen@github</span>
-                </a>
-            </div>
-            <div class="info-section link">
-                <i class="fab fa-codepen"></i>
-                <a target="_blank" rel="author" href="https://codepen.io/chih-hsi-chen">
-                    <span>codepen.io</span>
+                <a target="_blank" rel="author" href="https://github.com/FangedPanda">
+                    <span>FangedPanda@github</span>
                 </a>
             </div>
             <div class="info-section link">
                 <i class="fab fa-medium"></i>
-                <a target="_blank" rel="author" href="https://medium.com/狗奴工程師">
-                    <span>狗奴工程師</span>
+                <a target="_blank" rel="author" href="">
+                    <span>In Progress</span>
                 </a>
             </div>
         </div>
@@ -74,8 +68,8 @@
             </div>
             <div class="detail-content">
                 <div class="timeline-block">
-                    <h1>Department of Computer Science</h1>
-                    <p>National Tsing Hua University, Taiwan</p>
+                    <h1>Computer Science Engineering</h1>
+                    <p>Jaypee University of Information Technology, Solan</p>
                     <time>2015 - 2019</time>
                 </div>
                 <div class="timeline-block">
@@ -95,43 +89,37 @@
             <div class="detail-content">
                 <ul class="pg-list">
                     <li>
-                        <span>HTML5</span>
+                        <span>Java</span>
                         <div class="sb-skeleton">
                             <div class="skillbar" style="--pgbar-length: 90%"></div>
                         </div>
                     </li>
                     <li>
-                        <span>CSS3</span>
+                        <span>SQL</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 75%"></div>
+                            <div class="skillbar" style="--pgbar-length: 80%"></div>
                         </div>
                     </li>
                     <li>
-                        <span>Javascript</span>
+                        <span>HTML</span>
                         <div class="sb-skeleton">
                             <div class="skillbar" style="--pgbar-length: 70%"></div>
                         </div>
                     </li>
                     <li>
-                        <span>JQuery</span>
+                        <span>CSS</span>
                         <div class="sb-skeleton">
                             <div class="skillbar" style="--pgbar-length: 50%"></div>
                         </div>
                     </li>
                     <li>
-                        <span>NodeJS</span>
-                        <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 70%"></div>
-                        </div>
-                    </li>
-                    <li>
                         <span>ReactJS</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 75%"></div>
+                            <div class="skillbar" style="--pgbar-length: 50%"></div>
                         </div>
                     </li>
                     <li>
-                        <span>VueJS</span>
+                        <span>Cloud</span>
                         <div class="sb-skeleton">
                             <div class="skillbar" style="--pgbar-length: 40%"></div>
                         </div>
@@ -153,15 +141,15 @@
                             <circle cx="50" cy="50" r="45"></circle>
                             <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
                         </svg>
-                        <span class="tl-name">Photoshop</span>
-                        <span class="tl-exp">60%</span>
+                        <span class="tl-name">Intellij</span>
+                        <span class="tl-exp">90%</span>
                     </li>
                     <li>
                         <svg viewbox="0 0 100 100">
                             <circle cx="50" cy="50" r="45"></circle>
                             <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.8"></circle>
                         </svg>
-                        <span class="tl-name">Sublime</span>
+                        <span class="tl-name">Git</span>
                         <span class="tl-exp">80%</span>
                     </li>
                     <li>
@@ -169,16 +157,16 @@
                             <circle cx="50" cy="50" r="45"></circle>
                             <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.7"></circle>
                         </svg>
-                        <span class="tl-name">Git</span>
-                        <span class="tl-exp">70%</span>
+                        <span class="tl-name">Mysql</span>
+                        <span class="tl-exp">85%</span>
                     </li>
                     <li>
                         <svg viewbox="0 0 100 100">
                             <circle cx="50" cy="50" r="45"></circle>
                             <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.74"></circle>
                         </svg>
-                        <span class="tl-name">NPM</span>
-                        <span class="tl-exp">74%</span>
+                        <span class="tl-name">GCP</span>
+                        <span class="tl-exp">70%</span>
                     </li>
                 </ul>
             </div>
